--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
 
 	<input type="submit" value="Get" onclick="submit_form()" />  
-	</form>  <br>
+	</form>  <br><br><br>
 Best viewed in desktop, not optimised for mobile phones XD, minimalistic that is.
 </body>
 <script src="index.js"></script>
